examples/test/testpolicy15990.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15990
  namespace: namespace329
spec:
  podSelector:
    matchLabels:
      key8: value37
      key36: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value35
      podSelector:
        matchLabels:
          key20: value42
          key27: value37
          key32: value42
